--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,2 +1,6 @@
 @import "vendor/modularscale/modularscale";
 @import "~bulma/bulma";
+
+@import 'modules/variables';
+@import 'modules/typography';
+// @import 'modules/globals';
