--- a/app/assets/styles/modules/_variables.scss
+++ b/app/assets/styles/modules/_variables.scss
@@ -1,44 +1,44 @@
 /* ----- Colours ----- */
-$colour-main: #2F243A;
-$colour-main-700: #523F64;
-$colour-main-400: #71568A;
-$colour-main-300: #9075A9;
+$colour-main: #2f243a;
+$colour-main-700: #523f64;
+$colour-main-400: #71568a;
+$colour-main-300: #9075a9;
 
 $colour-danger-900: #672836;
-$colour-danger-700: #93394D;
-$colour-danger: #B6465F;
-$colour-danger-300: #CC7B8C;
-$colour-danger-200: #DDA7B3;
+$colour-danger-700: #93394d;
+$colour-danger: #b6465f;
+$colour-danger-300: #cc7b8c;
+$colour-danger-200: #dda7b3;
 
-$colour-warning-900 : #E06C00;
-$colour-warning-700 : #FF8B1F;
-$colour-warning : #B97A37;
-$colour-warning-300 : #FFCA99;
-$colour-warning-200 : #FFEAD6;
+$colour-warning-900 : #e06c00;
+$colour-warning-700 : #ff8b1f;
+$colour-warning : #b97a37;
+$colour-warning-300 : #ffca99;
+$colour-warning-200 : #ffead6;
 
-$colour-info-900: #0A2C48;
-$colour-info-700: #114D7E;
-$colour-info: #186EB4;
-$colour-info-300: #288EE2;
-$colour-info-200: #5DAAE9;
-$colour-info-100: #93C6F0;
+$colour-info-900: #0a2c48;
+$colour-info-700: #114d7e;
+$colour-info: #186eb4;
+$colour-info-300: #288ee2;
+$colour-info-200: #5daae9;
+$colour-info-100: #93c6f0;
 
-$colour-success-900: #0E4442;
+$colour-success-900: #0e4442;
 $colour-success-700: #187774;
-$colour-success: #20A39E;
-$colour-success-300: #33D7D1;
-$colour-success-200: #77E4E0;
+$colour-success: #20a39e;
+$colour-success-300: #33d7d1;
+$colour-success-200: #77e4e0;
 
-$grey-100: #F4F4F4;
-$grey-200: #DFDFDF;
-$grey-300: #CACACA;
-$grey-400: #B5B5B5;
-$grey-500: #A0A0A0;
+$grey-100: #f4f4f4;
+$grey-200: #dfdfdf;
+$grey-300: #cacaca;
+$grey-400: #b5b5b5;
+$grey-500: #a0a0a0;
 $grey-600: #737373;
-$grey-700: #5A5A5A;
+$grey-700: #5a5a5a;
 $grey-800: #404040;
 $grey-900: #272727;
-$grey-1000: #0D0D0D;
+$grey-1000: #0d0d0d;
 
 /* ----- Typography ----- */
 
