--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include "partials/navigation.html.twig" %}
         {% block body %}{% endblock %}
+        {% include "partials/footer.html.twig" %}
     </body>
 </html>
