--- a/app/assets/styles/modules/_variables.scss
+++ b/app/assets/styles/modules/_variables.scss
@@ -68,3 +68,10 @@ $spacing-small: 1rem;
 $spacing-medium: 2rem;
 $spacing-large: 4rem;
 $spacing-xlarge: 8rem;
+
+/* ----- Screen sizes ----- */
+$screen-size-xxl: 2560px;
+$screen-size-xl: 1920px;
+$screen-size-lg: 1440px;
+$screen-size-md: 1024px;
+$screen-size-sm: 768px;
