--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,5 +1,10 @@
 @import "vendor/modularscale/modularscale";
 @import "~bulma/bulma";
+
 @import 'modules/variables';
 @import 'modules/typography';
+
+@import 'components/main';
+@import 'components/hero';
+
 // @import 'modules/globals';
