--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -6,5 +6,7 @@
 
 @import 'components/main';
 @import 'components/hero';
+@import 'components/navigation';
+@import 'components/trick';
 
 // @import 'modules/globals';
