--- a/app/assets/styles/components/_hero.scss
+++ b/app/assets/styles/components/_hero.scss
@@ -13,8 +13,26 @@
     }
     &__display-text {
         font-family: $font-display;
-        font-size: ms(10);
         color: $grey-100;
         line-height: 1;
+        @include from($screen-size-xl) {
+            font-size: ms(11);
+          }
+        
+          @include until($screen-size-xl) {
+            font-size: ms(10);
+          }
+        
+          @include until($screen-size-lg) {
+            font-size: ms(9);
+          }
+        
+          @include until($screen-size-md) {
+            font-size: ms(8);
+          }
+        
+          @include until($screen-size-sm) {
+            font-size: ms(7);
+          }
     }
 }
