--- a/app/assets/styles/modules/_typography.scss
+++ b/app/assets/styles/modules/_typography.scss
@@ -15,60 +15,50 @@
 
 h1 {
   font-family: $font-display;
-  font-variation-settings:
-    'wght' 800,
-    'SOFT' 30,
-    'WONK' 1,
-    'opsz' 80;
   margin-bottom: $spacing-medium;
-  // @include very-very-large-display {
-  //   font-size: ms(7);
-  // }
+  @include from($screen-size-xl) {
+    font-size: ms(7);
+  }
 
-  // @include very-large-display {
-  //   font-size: ms(6);
-  // }
+  @include until($screen-size-xl) {
+    font-size: ms(6);
+  }
 
-  // @include large-display {
-  //   font-size: ms(6);
-  // }
+  @include until($screen-size-lg) {
+    font-size: ms(6);
+  }
 
-  // @include medium-display {
-  //   font-size: ms(6);
-  // }
+  @include until($screen-size-md) {
+    font-size: ms(5);
+  }
 
-  // @include small-display {
-  //   font-size: ms(4);
-  // }
+  @include until($screen-size-sm) {
+    font-size: ms(4);
+  }
 }
 
 h2 {
   font-family: $font-display;
-  font-variation-settings:
-    'wght' 600,
-    'SOFT' 40,
-    'WONK' 1,
-    'opsz' 80;
   margin-bottom: $spacing-medium;
-  // @include very-very-large-display {
-  //   font-size: ms(6);
-  // }
+  @include from($screen-size-xl) {
+    font-size: ms(6);
+  }
 
-  // @include very-large-display {
-  //   font-size: ms(5);
-  // }
+  @include until($screen-size-xl) {
+    font-size: ms(5);
+  }
 
-  // @include large-display {
-  //   font-size: ms(5);
-  // }
+  @include until($screen-size-lg) {
+    font-size: ms(5);
+  }
 
-  // @include medium-display {
-  //   font-size: ms(4);
-  // }
+  @include until($screen-size-md) {
+    font-size: ms(4);
+  }
 
-  // @include small-display {
-  //   font-size: ms(3);
-  // }
+  @include until($screen-size-sm) {
+    font-size: ms(3);
+  }
 }
 
 h3 {
@@ -84,7 +74,7 @@ h3 {
 h4 {
   font-family: $font-text;
   font-size: ms(2);
-  margin-bottom: $spacing-medium;
+  // margin-bottom: $spacing-medium;
   // @include small-display {
   //   font-size: ms(1);
   // }
