--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Snowtricks{% block title %}{% endblock %}</title>
+        <meta lang="fr">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
