--- a/app/templates/partials/navigation.html.twig
+++ b/app/templates/partials/navigation.html.twig
@@ -1,8 +1,15 @@
-<nav class="navigation">
-    <div>
-        <a href="/">Snowtricks</a>
+<nav class="navigation" role="navigation" aria-label="main navigation">
+    <div class="navigation__brand">
+        <a href="/" class="navigation__item">Snowtricks</a>
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
     </div>
-    <div>
-        <a href="">[Liens]</a>
+    <div class="navigation__menu">
+        <a href="#" class="navigation__item">Tricks</a>
+        <a href="#" class="navigation__item">Connexion</a>
+        <a href="#" class="navigation__item">Inscription</a>
     </div>
 </nav>
