fix: Stylelint and responsive

--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -1,13 +1,15 @@
 .navigation {
-    @extend .navbar;
-    &__brand {
-        @extend .navbar-brand;
-    }
-    &__menu {
-        @extend .navbar-menu;
-        @extend .navbar-end;
-    }
-    &__item {
-        @extend .navbar-item
-    }
+  @extend .navbar;
+
+  &__brand {
+    @extend .navbar-brand;
+  }
+
+  &__menu {
+    @extend .navbar-menu;
+    @extend .navbar-end;
+  }
+
+  &__item {
+    @extend .navbar-item; }
 }
