--- a/app/templates/homepage.html.twig
+++ b/app/templates/homepage.html.twig
@@ -1,4 +1,21 @@
 {% extends "base.html.twig" %}
 
+{% block title  %}
+    - Hi
+{% endblock %}
+
 {% block body %}
+    <section class="hero--homepage">
+        <p class="hero__display-text">Snowtricks</p>
+    </section>
+    <main class="main--centered">
+        <section class="tricks__section">
+            <h3>Derniers tricks ajoutés</h3>
+            <section class="trick__list">
+            {% for trick in tricks %}
+                {% include "components/trick.html.twig" %}
+            {% endfor %}
+            </section>
+        </section>
+    </main>
 {% endblock %}
