--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -2,4 +2,9 @@
 @import "~bulma/bulma";
 @import 'modules/variables';
 @import 'modules/typography';
+@import 'components/main';
+@import 'components/hero';
+@import 'components/navigation';
+@import 'components/trick';
+
 // @import 'modules/globals';
