--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Snowtricks{% block title %}{% endblock %}</title>
+        <meta lang="fr">
+        <meta name="viewport" content="width=device-width">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +16,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include "partials/navigation.html.twig" %}
         {% block body %}{% endblock %}
+        {% include "partials/footer.html.twig" %}
     </body>
 </html>
