--- a/app/templates/partials/navigation.html.twig
+++ b/app/templates/partials/navigation.html.twig
@@ -8,7 +8,7 @@
         </a>
     </div>
     <div class="navigation__menu">
-        <a href="#" class="navigation__item">Tricks</a>
+        <a href={{ path('tricks') }} class="navigation__item">Tricks</a>
         <a href="#" class="navigation__item">Connexion</a>
         <a href="#" class="navigation__item">Inscription</a>
     </div>
