--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -6,5 +6,6 @@
 @import 'components/hero';
 @import 'components/navigation';
 @import 'components/trick';
+@import 'components/message';
 
 // @import 'modules/globals';
