--- a/app/templates/components/trick.html.twig
+++ b/app/templates/components/trick.html.twig
@@ -1,5 +1,5 @@
 <div class="trick">
-    <div class="trick__image-container">
+    <div class="trick__coverContainer">
         <img class="trick__image" src={{ trick.coverImage.url }}/>
     </div>
     <h4>
