--- a/app/assets/styles/components/_trick.scss
+++ b/app/assets/styles/components/_trick.scss
@@ -16,10 +16,19 @@
     width: 100%;
   }
 
-  &__image-container {
+  &__details {
+    padding-bottom: $spacing-large;
+    border-bottom: 1px solid $grey-600;
+    margin-bottom: $spacing-xlarge;
+  }
+
+  &__group {
+    margin-bottom: $spacing-medium;
+  }
+
+  &__coverContainer {
     object-fit: cover;
     margin-bottom: $spacing-small;
-
   }
 
   &__list {
@@ -28,6 +37,16 @@
     flex-flow: row wrap;
     @include until($screen-size-md) {
       flex-flow: column;
+    }
+  }
+
+  &__media {
+    max-width: 20rem;
+    aspect-ratio: 16/9;
+    margin-right: $spacing-small;
+
+    &Collection {
+      margin-bottom: $spacing-large;
     }
   }
 }
