--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -7,5 +7,6 @@
 @import 'components/navigation';
 @import 'components/trick';
 @import 'components/message';
+@import 'components/form';
 
 // @import 'modules/globals';
