--- a/app/templates/registration/register.html.twig
+++ b/app/templates/registration/register.html.twig
@@ -3,23 +3,39 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+    <main class="main--centered">
+        {% for flashError in app.flashes('verify_email_error') %}
+            <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+        {% endfor %}
 
-    <h1>Register</h1>
+        <section class="section">
+            <h2>Inscrivez-vous</h2>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username)}}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.password.first, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.password.second, {
-            label: 'Repeat password'
-        }) }}
-        
+            <section class="form">
+                {{ form_start(registrationForm) }}
+                    <div class="form__field">
+                        {{ form_label(registrationForm.username) }}
+                        {{ form_widget(registrationForm.username) }}
+                    </div>
+                    <div class="form__field">
+                        {{ form_label(registrationForm.email) }}
+                        {{ form_widget(registrationForm.email) }}
+                    </div>
+                    <div class="form__field">
+                        {{ form_label(registrationForm.password.first) }}
+                        {{ form_widget(registrationForm.password.first) }}
+                    </div>
+                    <div class="form__field">
+                        {{ form_label(registrationForm.password.second) }}
+                        {{ form_widget(registrationForm.password.second)}}
+                    </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                    <p>Vous allez recevoir un email avec un lien afin de valider votre inscription.</p>
+
+                    <button type="submit" class="button is-link">Register</button>
+                {{ form_end(registrationForm) }}
+
+                </section>
+            </section>
+        </main>
 {% endblock %}
