--- a/app/assets/styles/components/_form.scss
+++ b/app/assets/styles/components/_form.scss
@@ -11,4 +11,9 @@
         display: inline-block;
         margin-bottom: $spacing-xsmall;
     }
+    button[type="submit"] {
+        font-family: $font-text;
+        font-size: ms(0);
+        font-variation-settings: 'wght' 650;
+    }
 }
