--- a/app/templates/registration/register.html.twig
+++ b/app/templates/registration/register.html.twig
@@ -32,7 +32,7 @@
 
                     <p>Vous allez recevoir un email avec un lien afin de valider votre inscription.</p>
 
-                    <button type="submit" class="button is-link">Register</button>
+                    <button type="submit" class="button is-link">Confirmer l'inscription</button>
                 {{ form_end(registrationForm) }}
 
                 </section>
