--- a/app/templates/login.html.twig
+++ b/app/templates/login.html.twig
@@ -13,12 +13,12 @@
         <h2>Connexion</h2>
         <form class="form" action="{{ path('login') }}" method="post">
             <div class="form__field">
-                <label class="label" for="username">Email:</label>
+                <label class="form__label" for="username">Email:</label>
                 <input class="input" type="text" id="username" name="_username" value="{{ last_username }}"/>
             </div>
 
             <div class="form__field">
-                <label class="label" for="password">Mot de passe:</label>
+                <label class="form__label" for="password">Mot de passe:</label>
                 <input class="input" type="password" id="password" name="_password"/>
             </div>
 
