--- a/app/templates/partials/navigation.html.twig
+++ b/app/templates/partials/navigation.html.twig
@@ -9,7 +9,7 @@
     </div>
     <div class="navigation__menu">
         <a href={{ path('tricks') }} class="navigation__item">Tricks</a>
-        <a href="#" class="navigation__item">Connexion</a>
-        <a href="#" class="navigation__item">Inscription</a>
+        <a href={{ path('login') }} class="navigation__item">Connexion</a>
+        <a href={{ path('register') }} class="navigation__item">Inscription</a>
     </div>
 </nav>
