update: write message for a trick

--- a/app/assets/styles/components/_form.scss
+++ b/app/assets/styles/components/_form.scss
@@ -1,6 +1,9 @@
 .form {
-    max-width: 30rem;
     padding: $spacing-small 0;
+    &--message {
+        @extend .form;
+        margin-bottom: $spacing-large;
+    }
     &__field {
         margin-bottom: $spacing-medium;
     }
