--- a/app/assets/styles/components/_trick.scss
+++ b/app/assets/styles/components/_trick.scss
@@ -19,7 +19,7 @@
   &__details {
     padding-bottom: $spacing-large;
     border-bottom: 1px solid $grey-600;
-    margin-bottom: $spacing-xlarge;
+    margin-bottom: $spacing-large;
   }
 
   &__group {
