--- a/app/templates/partials/navigation.html.twig
+++ b/app/templates/partials/navigation.html.twig
@@ -10,7 +10,7 @@
     <div class="navigation__menu">
         <a href={{ path('tricks') }} class="navigation__item">Tous les tricks</a>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <a href='#' class="navigation__item">Ajouter un trick</a>
+            <a href={{ path('new_trick') }} class="navigation__item">Ajouter un trick</a>
             <a href={{ path('logout') }} class="navigation__item">Déconnexion</a>
         {% else %}
             <a href={{ path('login') }} class="navigation__item">Connexion</a>
