--- a/app/assets/styles/components/_trick.scss
+++ b/app/assets/styles/components/_trick.scss
@@ -44,6 +44,7 @@
     max-width: 20rem;
     aspect-ratio: 16/9;
     margin-right: $spacing-small;
+    margin-bottom: $spacing-large;
 
     &Collection {
       margin-bottom: $spacing-large;
