--- a/app/templates/components/trick.html.twig
+++ b/app/templates/components/trick.html.twig
@@ -1,6 +1,6 @@
 <div class="trick">
     <div class="trick__coverContainer">
-        <img class="trick__image" src={{ trick.coverImage.url }}/>
+        <img class="trick__image" src={{ trick.coverImage.url }}>
     </div>
     <h4>
         <a href={{ path('display_trick', {slug: trick.slug}) }}>{{ trick.name }}</a>
