--- a/app/assets/styles/components/_trick.scss
+++ b/app/assets/styles/components/_trick.scss
@@ -31,6 +31,10 @@
     margin-bottom: $spacing-small;
   }
 
+  &__meta {
+    margin-bottom: $spacing-large;
+  }
+
   &__list {
     @extend .columns;
     display: flex;
