Feature/create trick (#22)
* update: WIP, new trick form

* update: WIP, forms

* update: form

* update: new Author column

* update: adding author

* fix: analysis fixes

* fix: typo ?

* update: relationship

* update: deleting trick (#23)

--- a/app/assets/styles/components/_trick.scss
+++ b/app/assets/styles/components/_trick.scss
@@ -31,6 +31,10 @@
     margin-bottom: $spacing-small;
   }
 
+  &__meta {
+    margin-bottom: $spacing-large;
+  }
+
   &__list {
     @extend .columns;
     display: flex;
@@ -44,6 +48,7 @@
     max-width: 20rem;
     aspect-ratio: 16/9;
     margin-right: $spacing-small;
+    margin-bottom: $spacing-large;
 
     &Collection {
       margin-bottom: $spacing-large;
