update: update trick

--- a/app/templates/trick.html.twig
+++ b/app/templates/trick.html.twig
@@ -10,11 +10,16 @@
     </section>
     <main class="main">
         <div class="trick__meta">
-            {% if trick.author == app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
-                <a href={{ path('delete_trick', {slug: trick.slug})}} class="button is-danger">Supprimer</a>
-            {% endif %}
             <h2>Informations du trick</h2>
-            <p>Rédigé par : {{ trick.author.firstname }} {{ trick.author.lastname }}</p>
+            {% if trick.author == app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
+            <p>Rédigé par vous</p>
+            <div class="trick__actions">
+                <a href={{ path('update_trick', {slug: trick.slug})}} class="button is-link">Modifier</a>
+                <a href={{ path('delete_trick', {slug: trick.slug})}} class="button is-danger">Supprimer</a>
+            </div>
+            {% else %}
+            <p>Rédigé par {{ trick.author.firstname }} {{ trick.author.lastname }}</p>
+            {% endif %}
         </div>
         <section class="trick__mediaCollection">
             <h3>Galerie</h3>
