--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>Snowtricks{% block title %}{% endblock %}</title>
         <meta lang="fr">
         <meta name="viewport" content="width=device-width">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
