--- a/app/templates/components/trick.html.twig
+++ b/app/templates/components/trick.html.twig
@@ -7,7 +7,7 @@
     </h4>
     <p>{{ trick.trickgroup.name }}</p>
     <p>
-        {% if is_granted ('ROLE_ADMIN') or user == trick.author %}
+        {% if is_granted ('ROLE_ADMIN') %}
             <a href={{ path('update_trick', {slug: trick.slug})}} class="button is-link is-small is-light">
                 <i class="ri-edit-line"></i> 
             </a>
